--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
       "scripting"
     ],
   "background": {
-     "service_worker": "background.js"
+     "service_worker": "background.js",
+     "type": "module"
     },
   "commands": {
     "_execute_action": {
